# JeudiLob

./: .gitignore  README.md  export_usersanonymes.py  load_csvfiles.py  load_georef_postgre.py  load_nbaapi.py  load_osmmeteo.py  load_parquet_file.py  load_pbi.ipynb  load_pbi.py  load_pg2duck.py  load_rb.ipynb  load_rborders.py  load_sncffiles.py  load_snowflake.py  main.py  pyproject.toml  rest_api_pipeline.py
.dlt/: config.toml
Data/NBA/: NBA Finals and MVP.csv
Data/PBI/: users.parquet
Data/Sncf/: comptage-voyageurs-trains-transilien.csv  incidents-de-securite-epsf.csv  tarifs-tgv-inoui-ouigo.csv
Db/: meteo.duckdb  sncf.db
JeudiLob/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
JeudiLob/macros/: get_tables_by_pattern_sql.sql
JeudiLob/models/1 - Raw/: _schema.yml  _source_nbaapi.yml  _sources_nbacsv.yml
JeudiLob/models/3 - Exposed/: joueurs.sql
JeudiLob/models/Nba/1 - Raw/: _source_nbaapi.yml
JeudiLob/models/Nba/3 - Exposed/: Equipes.sql  Stats_Joueurs.sql  _model.yml
ProjetJeudi/: .user.yml  dbt_project.yml  generate_model.py  generate_source.py  package-lock.yml  profiles.yml
ProjetJeudi/models/: schema_main.yml  schema_main_GOLD.yml  schema_main_SILVER.yml  source_datagouv.yml  source_meteo.yml  source_rb.yml  source_restaurant_pipeline.yml
ProjetJeudi/models/GOLD/: Dim_villes.sql
ProjetJeudi/models/SILVER/: datagouv_communes.sql  osm_restau_communes.sql
