[project]
name = "jeudide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb,postgres,workspace]>=1.24.0",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
]
